--- a/editor.scss
+++ b/editor.scss
@@ -1,50 +1,143 @@
 
-// !Includes.
+@import url("https://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic,900,900italic");
+
 @import "stylesheets/variables/index";
 @import "stylesheets/inc/index";
 
 :root {}
 
 @import "stylesheets/typography";
-@import "stylesheets/elements";
+@import "stylesheets/elements-common";
 
 @import "css/blocks.scss";
 
-// Fix line height in forms
+.editor-default-block-appender input[type="text"].editor-default-block-appender__content,
+.editor-post-title .editor-post-title__input,
+.edit-post-visual-editor,
+.edit-post-visual-editor p {
+	font-family: $x-font-family-body;
+}
+
+.edit-post-layout__content .edit-post-visual-editor {
+	overflow-x: hidden;
+}
+
+// Editor title font size.
+
+.editor-post-title .editor-post-title__input {
+	font-size: $x-font-size-xl;
+	font-weight: 900;
+	@include media( tablet ) {
+		font-size: calc( #{$x-font-size-xxxl} * 1.175 );
+	}
+}
+
+// Editor font size.
+
+body, p {
+	font-size: $x-font-size-base;
+
+	@include media(tablet) {
+		font-size: 1.05em;
+	}
+}
+
+// Editor width.
+.editor-post-title,
+.editor-block-list__block {
+	margin: 0 auto;
+	@include media( desktop ) {
+		max-width: $x-grid-column-7;
+		min-width: calc( #{$x-grid-column-7} * 1.03 );
+	}
+}
+
+.wp-block-columns .editor-block-list__block {
+	min-width: auto;
+}
+
+// Line height.
+
 .editor-rich-text__tinymce.mce-content-body {
 	line-height: $x-font-leading-body;
 }
 
-// Remove left margin of list blocks
-.block-library-list .editor-rich-text__tinymce.mce-content-body {
-	padding-left: 0;
-	margin-left: 0;
+.editor-block-list__block-edit {
+	
 }
 
-body, p {
+// List styles.
+
+.block-library-list {
 	
-	// Override elements.scss block-level background color
-	background-color: transparent;
-
-	// Font size base for mobile
-	font-size: $x-font-size-base;
-
-	@include media(tablet) {
-		// Font size for tablet and up
-		/* boom */
-		font-size: calc( #{$x-font-size-base} * #{$x-font-size-responsive-ratio} ); // 1 1/6
+	.editor-rich-text__tinymce {
+		margin-left: 0;
 	}
+	
+	ol {
+		list-style: none;
+		padding-left: 0;
+		> li {
 
+				counter-increment: sans-counter;
+				position: relative;
+				padding-left: $x-space-md;
+
+				ol li {
+					padding-left: $x-space-md;
+				}
+
+				ul li {
+					padding-left: $x-space-sm;
+				}
+
+				&:before {
+					content: counter(sans-counter, decimal-leading-zero) "\00a0";
+					left: 0;
+					position: absolute;
+					top: $x-space-xxs;
+					color: $x-color-primary-base;
+					font-family: $x-font-family-heading;
+					font-size: $x-font-size-xs;
+					line-height: $x-font-leading-md;
+				}
+			}
+	}
+}
+
+// Separators
+
+hr {
+	background-color: $x-color-shade-gray-2;
+	border: 0;
+	height: 3px;
+	margin-bottom: 1.5em;
 }
 
 // Blockquote
 
-blockquote {
+.edit-post-visual-editor .editor-block-list__block[data-align=full] {
+	> .editor-block-list__block-edit {
+		margin-left: 0;
+		margin-right: 0;
+	}
 	
+	.wp-block-pullquote blockquote {
+		max-width: calc( 100vw - 2em );
+	}
+}
+
+.wp-block-pullquote blockquote >.block-library-pullquote__content .editor-rich-text__tinymce[data-is-empty=true]:before,
+.wp-block-pullquote blockquote>.editor-rich-text p {
+	font-size: calc( #{$x-font-size-md} * 1.056 );
+}
+
+blockquote {
+
 	max-width: 1100px;
 	margin: 0 auto;
 	border-left-color: $x-color-accent-base !important;
-
+	
 	&.wp-block-quote,
 	&.wp-block-quote.is-large,
 	&.wp-block-quote.is-style-large {
@@ -52,12 +145,6 @@ blockquote {
 		@include media(tablet) {
 			margin-right: 0;
 		}
-	}
-
-	&:not(.is-large):not(.is-style-large) {
-//		border-left: none;
-//		margin-right: 0;
-//		padding-left: 0;
 	}
 
 	.wp-block-quote__citation {
@@ -76,7 +163,6 @@ blockquote {
 
 .wp-block-text-columns,
 .wp-block-columns {
-
 	@include media(tablet) {
 		margin-right: 0;
 	}
@@ -85,9 +171,7 @@ blockquote {
 // Images
 
 .wp-block-image {
-	
 	figcaption {
 		margin-top: 0.8em;
 	}
-	
 }
