Prevent entry header from touching edge of the screen.

--- a/stylesheets/_entries.scss
+++ b/stylesheets/_entries.scss
@@ -344,6 +344,12 @@
 	.blog &,
 	.archive &,
 	.search & {
+		
+		.entry-header {
+			@include media( desktop ) {
+				padding-left: $x-space-md;
+			}
+		}
 
 		.entry-featured-image {
 			min-height: auto;
