--- a/css/blocks.scss
+++ b/css/blocks.scss
@@ -7,51 +7,49 @@
 
 // !Block sizing & positioning
 
-#page {
-	
-	.alignfull {
-		max-width: $x-grid-column-8;
-		width: 100%;
-		margin: 0;
-	}
-	
-	@include media( tablet ) {
-		.alignwide {
-			position: relative;
-			width: $x-space-column-12;
-			transform: translateX( -50% );
-			max-width: calc( 100vw - 2 * 1em );
-			margin-top: 1em;
-			margin-bottom: 1em;
-			left: 50%;
-		}
-
-		.alignfull {
-			position: relative;
-			transform: translateX( -50% );
-			width: 100vw;
-			max-width: 100vw;
-			margin-top: 1em;
-			margin-bottom: 1em;
-			left: 50%;
-		}
-	}
-	
-	.aligncenter {
-		margin: 1em auto;
-	}
-	
-	.alignleft {
-		float: left;
-		margin-right: 1em !important;
-	}
-
-	.alignright {
-		float: right;
-		margin-left: 1em !important;
-	}
-
+.alignfull {
+	max-width: $x-grid-column-8;
+	width: 100%;
 }
+
+@include media( tablet ) {
+	.alignwide {
+		position: relative;
+		width: $x-space-column-12;
+		transform: translateX( -50% );
+		max-width: calc( 100vw - 2 * 1em );
+		margin-top: 1em;
+		margin-bottom: 1em;
+		left: 50%;
+	}
+
+	.alignfull {
+		position: relative;
+		transform: translateX( -50% );
+		width: 100vw;
+		max-width: 100vw;
+		margin-top: 1em;
+		margin-bottom: 1em;
+		left: 50%;
+	}
+}
+
+.aligncenter {
+	margin: 1em auto;
+}
+
+.alignleft {
+	float: left;
+	margin-right: $x-space-xs !important;
+	margin-bottom: $x-space-xs;;
+}
+
+.alignright {
+	float: right;
+	margin-left: $x-space-xs !important;
+	margin-bottom: $x-space-xs;
+}
+
 
 // !Buttons
 
@@ -79,8 +77,7 @@
 
 	&:active,
 	&:focus {
-		background-color: $x-color-shade-white;
-		color: $x-color-words-subtle;
+		background-color: $x-color-accent-light;
 	}
 
 	@include media( tablet ) {
@@ -147,10 +144,6 @@
 // !Cover image
 
 .wp-block-cover-image {
-	
-	#page & {
-		margin: 0 auto;
-	}
 
 	width: inherit;
 
@@ -220,6 +213,10 @@
 .wp-block-gallery.alignfull .blocks-gallery-image figcaption,
 .wp-block-gallery.alignfull .blocks-gallery-item figcaption {
 	padding: $x-space-xs $x-space-sm;
+
+	a { 
+		color: $x-color-shade-white;
+	}
 }
 
 .wp-block-gallery .blocks-gallery-image figcaption, 
@@ -244,6 +241,10 @@
 
 	&.has-4-columns .wp-block-column {
 		width: calc( 25% - ( $x-space-gutter * .25 ) );
+	}
+
+	@include media(mobile) {
+		display: block;
 	}
 
 	@include media( tablet ) {
@@ -286,8 +287,19 @@ ol.wp-block-latest-comments {
 		}
 	}
 }
-ol.wp-block-latest-comments > li:before {
-	content: '';
+ol.wp-block-latest-comments {
+	
+	> li:before {
+		content: '';
+	}
+
+	li {
+		padding-left: 0;
+
+		@include media(tablet) {
+			padding-left: $x-space-md;
+		}			
+	}
 }
 
 .wp-block-latest-comments__comment-excerpt {
@@ -466,8 +478,8 @@ table.wp-block-table {
 // !Separators
 
 .wp-block-separator {
-	margin-top: $x-space-md;
-	margin-bottom: $x-space-md;
+	margin-top: $x-space-md !important;
+	margin-bottom: $x-space-md !important;
 	padding: 0;
 	width: 100px;
 	
@@ -481,7 +493,7 @@ table.wp-block-table {
 
 		&:before {
 			content: "\00b7 \00b7 \00b7 \00b7 \00b7";
-			color: $x-color-shade-gray-2;
+			color: $x-color-shade-gray-6;
 			font-family: $body-font; /* family@include globalvar(font-family, body); */
 			font-size: $x-font-size-lg;
 			letter-spacing: 1em;
@@ -495,6 +507,14 @@ table.wp-block-table {
 		}
 	}
 }
+
+// alignfull blocks
+.wp-block-file.alignfull {
+	@include media(tablet) {
+		padding: 0 $x-space-sm;
+	}
+}
+
 
 /*--------------------------------------------------------------
 // !Block Color Palette Colors
