Columns block: keep the columns layout on tablet, remove on mobile.

--- a/css/blocks.scss
+++ b/css/blocks.scss
@@ -237,7 +237,7 @@
 		width: calc( 25% - ( $x-space-gutter * .25 ) );
 	}
 
-	@include media(mobile) {
+	@include media(tablet) {
 		display: block;
 	}
 
