--- a/stylesheets/_site-navigation.scss
+++ b/stylesheets/_site-navigation.scss
@@ -397,7 +397,7 @@
 		flex-direction: column;
 
 		a {
-			display: block;
+			display: inline-block;
 			font-size: $x-font-size-md;
 			font-weight: 700;
 
