--- a/css/blocks.scss
+++ b/css/blocks.scss
@@ -514,11 +514,29 @@ table.wp-block-table {
 }
 
 // alignfull blocks
-.wp-block-file.alignfull {
-	@include media(tablet) {
-		padding: 0 $x-space-sm;
+.wp-block-file {
+	
+	> a:first-child {
+		color: inherit;
+		box-shadow: none;
+		&:hover {
+			text-decoration: underline;
+		}
 	}
+	
+	&.aligncenter, &.alignfull, &.alignwide {
+		text-align: center;
+	}
+	
+	&.alignfull {
+		@include media(tablet) {
+			padding: 0 $x-space-sm;
+		}
+	}
+	
 }
+
+
 
 
 /*--------------------------------------------------------------
