--- a/stylesheets/_entries.scss
+++ b/stylesheets/_entries.scss
@@ -245,11 +245,7 @@
 		}
 
 		a {
-			box-shadow: 0 1px 0 0;
-
-			&:hover {
-				box-shadow: none;
-			}
+			@include box-shadow-underline;
 		}
 
 		.more-link {
