Fixes to captions in editor.

--- a/css/blocks.scss
+++ b/css/blocks.scss
@@ -206,7 +206,7 @@
 	color: $x-color-words-subtle;
 	font-size: $x-font-size-sm;
 	font-family: $x-font-family-heading;
-	padding: $x-space-xxs, 0;
+	padding: $x-space-xxs 0;
 	font-style: normal;
 	text-align: left;
 	text-transform: none;
