--- a/editor.scss
+++ b/editor.scss
@@ -42,6 +42,12 @@ body, p {
 	}
 }
 
+#editor .components-notice {
+	&, p {
+		font-size: 1rem;
+	}
+}
+
 // Editor width.
 .editor-post-title,
 .editor-block-list__block {
