--- a/css/blocks.scss
+++ b/css/blocks.scss
@@ -55,6 +55,44 @@
 	
 }
 
+// !Block Color Palette Colors
+
+.has-background {
+	padding: $x-space-sm;
+}
+
+.has-purple-color {
+	color: $x-color-accent-base;
+}
+
+.has-purple-background-color {
+	background-color: $x-color-accent-base;
+}
+
+.has-light-gray-color {
+	color: $x-color-border-base;
+}
+
+.has-light-gray-background-color {
+	background-color: $x-color-border-base;
+}
+
+.has-medium-gray-color {
+	color: $x-color-primary-base;
+}
+
+.has-medium-gray-background-color {
+	background-color: $x-color-primary-base;
+}
+
+.has-dark-gray-color {
+	color: $x-color-secondary-base;
+}
+
+.has-dark-gray-background-color {
+	background-color: $x-color-secondary-base;
+}
+
 
 // !Buttons
 
@@ -517,7 +555,8 @@ table.wp-block-table {
 	}
 }
 
-// alignfull blocks
+// !File Block
+
 .wp-block-file {
 	
 	> a:first-child {
@@ -541,43 +580,12 @@ table.wp-block-table {
 }
 
 
+// !Gallery Block
 
-
-/*--------------------------------------------------------------
-// !Block Color Palette Colors
---------------------------------------------------------------*/
-.has-background {
-	padding: $x-space-sm;
-}
-
-.has-purple-color {
-	color: $x-color-accent-base;
-}
-
-.has-purple-background-color {
-	background-color: $x-color-accent-base;
-}
-
-.has-light-gray-color {
-	color: $x-color-border-base;
-}
-
-.has-light-gray-background-color {
-	background-color: $x-color-border-base;
-}
-
-.has-medium-gray-color {
-	color: $x-color-primary-base;
-}
-
-.has-medium-gray-background-color {
-	background-color: $x-color-primary-base;
-}
-
-.has-dark-gray-color {
-	color: $x-color-secondary-base;
-}
-
-.has-dark-gray-background-color {
-	background-color: $x-color-secondary-base;
+.wp-block-gallery .blocks-gallery-image figcaption,
+.wp-block-gallery .blocks-gallery-item figcaption {
+	display: inline-block;
+	padding: $x-space-xxs;
+	font-size: $x-font-size-sm;
+	font-style: italic;
 }
