Normalize font size on columns block.

--- a/editor.scss
+++ b/editor.scss
@@ -244,3 +244,7 @@ blockquote {
 .edit-post-visual-editor .editor-block-list__block[data-align=full] {
 	padding: 0;
 }
+
+.wp-block-columns {
+	font-size: 0.892em;
+}
