--- a/editor.scss
+++ b/editor.scss
@@ -11,6 +11,36 @@
 
 @import "css/blocks.scss";
 
+@mixin editor-font-base {
+	font-size: $x-font-size-base;
+
+	@include media(tablet) {
+		// font-size for tablet and up
+		font-size: calc( #{$x-font-size-base} * 0.95065 * #{$x-font-size-responsive-ratio} );
+	}
+}
+
+.gutenberg .edit-post-visual-editor, p {
+	@include editor-font-base;
+	
+	h1, h2, h3, h4, h5, h6 {
+		margin-top: 0.83em;
+	}
+}
+
+.gutenberg .editor-block-list__block blockquote p,
+.gutenberg .editor-block-list__block blockquote.is-large p {
+	@include editor-font-base;
+	padding-left: 0;
+}
+
+.editor-block-list__layout > .editor-block-list__block > .editor-block-list__block-edit,
+.editor-block-list__layout > .editor-block-list__layout > .editor-block-list__block > .editor-block-list__block-edit,
+.editor-block-list__layout > .editor-default-block-appender__content {
+	margin-top: 0;
+	margin-bottom: 0;
+}
+
 .edit-post-visual-editor .editor-block-list__block[data-align=wide] {
 	max-width: $x-space-column-12;
 }
@@ -26,30 +56,13 @@
 	overflow-x: hidden;
 }
 
-// Editor title font size.
-
 .editor-post-title .editor-post-title__input {
 	font-size: $x-font-size-xl;
 	font-weight: 900;
 	line-height: 1.2;
+	margin-bottom: 1.85rem;
 	@include media( tablet ) {
 		font-size: calc( #{$x-font-size-xxxl} * 1.175 );
-	}
-}
-
-// Editor font size.
-
-body, p {
-	font-size: $x-font-size-base;
-
-	@include media(tablet) {
-		font-size: 1.055em;
-	}
-}
-
-#editor .components-notice {
-	&, p {
-		font-size: 1rem;
 	}
 }
 
@@ -163,17 +176,21 @@ blockquote {
 	margin: 0 auto;
 	border-left-color: $x-color-accent-base !important;
 	
+	&.wp-block-quote.is-style-large {
+		padding-left: $x-space-xl;
+	}
+	
 	&.wp-block-quote,
 	&.wp-block-quote.is-large,
 	&.wp-block-quote.is-style-large {
-
+		
 		@include media(tablet) {
 			margin-right: 0;
 		}
 	}
 
 	.wp-block-quote__citation {
-		padding-left: $x-space-sm;
+//		padding-left: $x-space-sm;
 	}
 }
 
@@ -247,4 +264,26 @@ blockquote {
 
 .wp-block-columns {
 	font-size: 0.892em;
+}
+
+.wp-block-quote.is-style-default .wp-block-quote__citation {
+	font-size: calc( #{$x-font-size-sm} * 1.1205 );
+}
+
+.wp-block-quote:not(.is-large):not(.is-style-large) {
+	padding-left: calc( #{$x-space-lg} * 0.75 );
+}
+
+.gutenberg .editor-block-list__block blockquote.wp-block-quote.is-style-large {
+	padding-left: $x-space-md;
+	p {
+		font-size: calc( #{$x-font-size-lg} * 1.10 );
+	}
+	.wp-block-quote__citation {
+		font-size: $x-font-size-md;
+	}
+}
+
+.editor-block-list__block[data-type="core/paragraph"] a {
+	@include box-shadow-underline;
 }
