--- a/stylesheets/_typography.scss
+++ b/stylesheets/_typography.scss
@@ -1,15 +1,8 @@
 
 /** === Typography === */
-body {
 
-	// font-size base for mobile
-	font-size: $x-font-size-base;
-
-	@include media(tablet) {
-
-		// font-size for tablet and up
-		font-size: calc( #{$x-font-size-base} * #{$x-font-size-responsive-ratio} ); // 1 1/6
-	}
+body:not(.gutenberg-editor-page) {
+	@include typography-base;
 }
 
 body,
