Prevent editor styles from leaking into WP-Admin.

--- a/stylesheets/_typography.scss
+++ b/stylesheets/_typography.scss
@@ -5,7 +5,7 @@ body:not(.gutenberg-editor-page) {
 	@include typography-base;
 }
 
-body,
+body:not(.gutenberg-editor-page),
 button,
 input,
 select,
