Minor tweaks to post and page headers.

--- a/stylesheets/_wordpress.scss
+++ b/stylesheets/_wordpress.scss
@@ -64,7 +64,8 @@
 
 /** === 404 page === */
 .error404,
-.search-no-results {
+.search-no-results,
+.no-results {
 	.page-header {
 		display: block;
 
