Normalize bottom margin for blog posts.

--- a/stylesheets/_entries.scss
+++ b/stylesheets/_entries.scss
@@ -112,6 +112,7 @@
 		
 		font-size: $x-font-size-xs;
 		margin: $x-space-sm;
+		margin-bottom: 0 !important;
 		color: $x-color-words-subtle;
 
 		a {
