--- a/stylesheets/_site-branding.scss
+++ b/stylesheets/_site-branding.scss
@@ -95,10 +95,6 @@
 	border-top: 1px solid grey;
 	border-color: $x-color-border-base;
 
-	@include media( mobile ) {
-		padding-bottom: $x-space-xl;
-	}
-	
 	@include media( tablet ) {
 		
 		$credits_width: 60%;
@@ -121,7 +117,14 @@
 	font-size: $x-font-size-sm;
 	font-family: $x-font-family-body;
 	padding: $x-space-sm;
-
+	
+	@include media( mobile ) {
+		display: flex;
+		flex-direction: column;
+		padding-top: 0;
+		padding-bottom: 0;
+	}
+	
 	a {
 		color: inherit;
 		&:hover {
@@ -140,6 +143,17 @@
 		margin-right: auto;
 		padding: $x-space-lg $x-space-sm;
 	}
+}
+
+.site-credits {
+	
+	@include media( mobile ) {
+		margin: 0;
+		padding: $x-space-md 0;
+		width: 100%;
+		order: 2;
+	}
+	
 }
 
 #primary-menu {
