--- a/style.scss
+++ b/style.scss
@@ -1,9 +1,9 @@
 /*!
 Theme Name: Business
-Theme URI: https://github.com/Automattic/default-small-business-theme
+Theme URI: https://wordpress.com/themes/business
 Author: Automattic
-Author URI: https://automattic.com
-Description: Gutenberg-ready small business theme for WordPress.com
+Author URI: https://wordpress.com/themes
+Description: A small-business theme for the WordPress Editor.
 Version: 1.0.0-wpcom
 License: GNU General Public License v2 or later
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
