Swap out custom social menu for Jetpack social menu.

--- a/stylesheets/_site-branding.scss
+++ b/stylesheets/_site-branding.scss
@@ -105,7 +105,7 @@
 			padding-right: $x-space-md;
 		}
 	
-		.social-navigation {
+		.jetpack-social-navigation {
 			max-width: 100% - $credits_width;
 			order: 2;
 		}
